		now logged.
		(2008-10-14 - Adam Franco)
		
	* Bug Fix: #2166913 
		Tagging: Fixed file path in tag actions to point at new plugins-dist
		directory. 
		(2008-10-15 - Adam Franco)
		(reported by alex_chapin)
		
	* Bug Fix: #2114311 
		Attribution: Straightened out attribution printing so that authors could be
		shown without dates.
		(2008-10-15 - Adam Franco)
		(reported by alex_chapin)
	



v. 2.2.5.1 (2008-10-14)
----------------------------------------------------
This release add the ability to make empty site-placeholders aliases to placeholders
that contain sites. This enables sites to be moved and have users redirected from
the old urls. As well making multiple course-section-placeholders aliases to a
single site for the course can allow that site to show up under the 'current
classes' listing for students in all sections of the course.

The user interface for copying sites has now been merged with the user-interface
for copying content for a more consistent user experience.

The 2.2.5.1 bug-fix release adds improvements to the installation process to help
ensure that new installations are operational without running database updates.

See the change-log for details on additional fixes and improvements.

Upgrades from versions prior to 2.2.5.0 require running system updaters located
under Admin Tools --> Segue Updates.

This Segue release uses Harmoni 1.8.2 and Polyphony 1.4.7.
		
		
	* Bug Fix: 
		Installation: Updated 'slot' table SQL so that updaters do not need to be
		run for new installations.
		(2008-10-14 - Adam Franco)
		
	* Bug Fix: 
		Installation: Reordered SQL files so that new installations will succeed.
		(2008-10-14 - Adam Franco)
		
	* Bug Fix: 
		Installation: Plugin SQL files now get run automatically on install.
		(2008-10-14 - Adam Franco)
		
	* Bug Fix: 
		Installation: New installations now have a 'jadministrator-test_site'
		placeholder added so that it is straightforward how to create a site and
		test if Segue is operational.