@@ -46,6 +46,9 @@
 		<li>
 <b>Bug Fix:</b><a href="http://sourceforge.net/tracker/index.php?func=detail&amp;aid=2114311&amp;group_id=82171&amp;atid=565234">
         			#2114311</a> Attribution: Straightened out attribution printing so that authors could be shown without dates. (<em>2008-10-15 - Adam Franco</em>)<br> (<em>reported by alex_chapin</em>)</li>
+		<li>
+<b>Bug Fix:</b><a href="http://sourceforge.net/tracker/index.php?func=detail&amp;aid=2033088&amp;group_id=82171&amp;atid=565234">
+        			#2033088</a> All submit buttons have been labeled to reflect their action rather than simply saying 'Submit'. (<em>2008-10-15 - Adam Franco</em>)</li>
 	</ul>
 <br><h2>Version 2.2.5.1</h2>
 <h3>2008-10-14</h3>
